public/css/page.css
html {
  font-size: 20px;
  font-family: "Sedgwick Ave", cursive;
  -webkit-font-smoothing: antialiased;
  text-rendering: geometricPrecision;
  line-height: 1.5;
  user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}

body {
  display: flex;
  justify-content: center;
  background-color: darkgrey;
  background-image: url("../img/background/background.png");
}

header {
  display: block;
}

.logo {
  background: url("../img/logo/logo-64.png");
  height: 64px;
  width: 64px;
  display: block;
  transform: rotate(45deg);
  margin-right: 0.65rem;
}

div#page {
  display: flex;
  flex-direction: column;
  width: 60rem;
  margin: 0.5rem 0.5rem;
  background-color: white;
  border: 2px solid black;
  box-shadow: 0px 0px 50px 10px black;
}

@media screen and (min-width: 500px) {
  div#page {
    margin: 2rem 2rem;
  }
}

@media screen and (min-width: 650px) {
  div#page {
    margin: 3rem 3rem;
  }
}

div.widget {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  position: relative;
  padding: 0.25rem;
}

div.widget:has(.group-domain) {
  width: 100%;
}

@media screen and (min-width: 500px) {
  div.widget:has(.group-domain) {
    width: 80%;
  }
}

div.widget:has(.group-category) {
  width: 100%;
}

@media screen and (min-width: 500px) {
  div.widget:has(.group-category) {
    width: 20%;
  }
}

.fill {
  width: 100%;
}

.hide {
  opacity: 0;
  transition: opacity 1s;
}

.show {
  opacity: 1;
  transition: opacity 1s;
}

header#main-header {
  height: 4.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: slateblue;
}

@media screen and (min-height: 800px) {
  header#main-header {
    height: 5rem;
  }
}


header#main-header h1 {
  margin: 0;
  font-size: 1.35rem;
}

@media screen and (min-width: 650px) {
  header#main-header h1 {
    font-size: 2rem;
  }
}

header#main-header a {
  margin: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: black;
}

header#content-header {
  height: 2.5rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: black;
  background-image: linear-gradient(slateblue 15%, mediumslateblue);
}

header#content-header h3 {
  margin: 0rem 0rem 0rem 1rem;
  font-size: 0.85rem;
}

@media screen and (min-width: 650px) {
  header#content-header h3 {
    margin: 0rem 0rem 0rem 1rem;
    font-size: 1.17rem;
  }
}

header#content-header div.user-management {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  margin: 0rem 0.25rem 0.25rem 0rem;
}

@media screen and (min-width: 375px) {
  header#content-header div.user-management {
    flex-direction: row;
    margin: 0rem 1rem 0rem 0rem;
  }
}

div.user-management h5 {
  display: block;
  font-weight: 100;
  margin: 0 0 0 0;
}

@media screen and (min-width: 375px) {
  div.user-management h5 {
    margin: 0.15rem 0 0 0;
  }
}

div.user-management form {
  display: flex;
  height: 100%;
  margin: 0rem;
  align-items: center;
}

div.user-management button#user-logout {
  height: 100%;
  margin: 0rem 0rem 0rem 0.5rem;
  border: 1px solid black;
  border-radius: 0.25rem;
  background-color: rgb(190, 180, 255);
  transition: background-color 0.25s ease;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

@media screen and (min-width: 375px) {
  div.user-management button#user-logout {
    height: 60%;
    width: 4rem;
  }
}

button#user-logout i {
  font-size: 1rem;
  margin-right: 0.25rem;
}

div.user-management button#user-logout:hover {
  cursor: pointer;
  background-color: crimson;
  transition: background-color 0.25s ease;
}

div#main-content {
  height: 100%;
  overflow: hidden;
  color: mediumslateblue;
  background-color: mediumslateblue;
}

footer#main-footer {
  height: 2rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  color: black;
  background-color: mediumslateblue;
}

@media screen and (min-width: 500px) {
  footer#main-footer {
    justify-content: center;
  }
}

footer#main-footer h3 {
  margin: 0px 0px 0px 10px;
  font-size: 11px;
}

@media screen and (min-width: 500px) {
  footer#main-footer h3 {
    margin: 0;
    font-size: 15px;
  }
}

footer#main-footer div#footer-links {
  position: absolute;
  right: 0rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0;
  font-size: 20px;
}

footer#main-footer div#footer-links a {
  text-decoration: none;
  color: inherit;
}

footer#main-footer div#status-preview {
  padding: 0 0.5rem;
  border-right: solid 1px black;
  letter-spacing: 0.15rem;
  overflow: hidden;
  white-space: nowrap;
  border-radius: 10px 0 0 10px;
  background-color: darkslateblue;
}

footer#main-footer div#status-preview.collapsed {
  transition: width 0.5s ease;
  width: 20px;
}

footer#main-footer div#status-preview.preview {
  transition: width 0.5s ease;
  width: 80px;
}

footer#main-footer div#status-preview.expanded {
  transition: width 0.5s ease;
  width: 115px;
}

footer#main-footer i#show-github {
  margin: 0 0.75rem;
}

div#status-preview i#show-dashboard {
  color: white;
  margin-left: 5px;
}

div#status-preview i#status-web-database {
  font-size: 17px;
}

